Address CI build failures and issues raised in code review